JBR-8304 Wayland: UI/UnninstallUIMemoryLeaks/UnninstallUIMemoryLeaks.java throws HeadlessException: No X11 DISPLAY variable was set
Pass JVM options to sub-tests in a more reliable and uniform fashion